@@ -16,12 +16,14 @@ TODO:
         - Quid IAT hook stub ? just einit threads and remove this ?
         - Continue test with new generate_callback_stub and remove commented code if it works
 
+        - rewrite/REMOVE? generate_stub_64[32] : it's a non-sens to not save stuff on the stack..
+            I can re-copy the args on stack..
+
     - Injection
         - code generated by generate_python_exec_shellcode_64[32] may be reused
             Just need to pass the address of the python string as argument
 
-    - rewrite generate_stub_64[32] : it's a non-sens to not save stuff on the stack..
-        I can re-copy the args on stack..
+
 
     - Winproxy:
         - rethink OptionalExport ? not useful with lazy resolution (or we need to force resolution..)
@@ -44,15 +46,11 @@ TODO:
     - Some test/doc on windows.system.handles
 
 
-CHANGELOG:
-    * re-check every sample
-
 Documentation
     * verif samples
 
 FIXME:
     - setup.py build seems to raise an error
-    - winutils.create_process : use WinProcess._from_handle
     - Push("[ECX]") in simple_x64 as a "H" rex and i think it should not..
 
 RESSOURCE
