@@ -11,3 +11,4 @@ Since 0.2:
     * CurrentProcessReadSyswow doest not use ``current_process.handle`` anymore but ``OpenProcess(current_process.pid)`` (Compat windows10 where method 1 doest not work)
     * Add: system.handles (winobject\handle.py)
     * You can have multiple execute_python_unsafe at the same time in the same process (didn't know: consequence of new injection code)
+    * WinProcess.execute_python does not regenerate/reinject the python_exec_shellcode for each execution
